fix podman parameter name https://bugzilla.suse.com/show_bug.cgi?id=1233383 https://github.com/SUSE/spacewalk/issues/25867

--- a/modules/administration/pages/disconnected-setup.adoc
+++ b/modules/administration/pages/disconnected-setup.adoc
@@ -167,10 +167,10 @@ To set up {productname} as a disconnected server follow the instructions of an a
 It is recommended to deploy a disconnected server as a Virtual Machine (VM) using a provided image.
 For an air-gapped deployment of {productname} Server, see xref:installation-and-upgrade:container-deployment/suma/server-air-gapped-deployment-suma.adoc[].
 
-Keep in mind to execute the final command with the [option]``--mirrorPath`` option and replace [literal]``</media/disk>`` with your mount point:
+Keep in mind to execute the final command with the [option]``--mirror`` option and replace [literal]``</media/disk>`` with your mount point:
 
 ----
-mgradm install podman --mirrorPath </media/disk>
+mgradm install podman --mirror </media/disk>
 ----
 
 
