--- a/modules/administration/pages/live-patching.adoc
+++ b/modules/administration/pages/live-patching.adoc
@@ -1,5 +1,5 @@
 [[live-patching]]
-= Live Patching with SUSE Manager
+= Live Patching with {productname}
 
 
 Performing a kernel update usually requires a system reboot.
