--- a/modules/administration/pages/repo-metadata.adoc
+++ b/modules/administration/pages/repo-metadata.adoc
@@ -1,5 +1,5 @@
 [[security-repo-metadata]]
-= Signing Repository Metadata
+= Repository Metadata
 
 You require a custom GPG key to be able to sign repository metadata.
 
