--- a/modules/administration/pages/troubleshooting/tshoot-highsynctimesoverwan.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-highsynctimesoverwan.adoc
@@ -12,7 +12,8 @@ Consequence: What does the user see when this happens?
 Fix: What can the user do to fix this problem?
 Result: What happens after the user has completed the fix?
 
-If more detailed instructions are required, put them in a "Resolving" procedure:
+If more detailed instructions are required, put them in a "Resolving" procedure.
+
 .Procedure: Resolving Widget Wobbles
 . First step
 . Another step
@@ -70,7 +71,7 @@ If further help is required, contact SUSE Consulting.
 
 The proposed approach using the script is beneficial in the following environment:
 
-* SUSE Manager Proxy systems are connected via a WAN connection;
+* {productname} Proxy systems are connected via a WAN connection;
 * [literal]``/srv/tftboot`` contains a high number of files for distributions and client PXE boot files, in total several thousand files;
 * Any proxy in [literal]``/etc/cobbler/settings`` has been disabled, otherwise {productname} will continue to sync content to the proxies.
 +
@@ -80,16 +81,17 @@ The proposed approach using the script is beneficial in the following environmen
 # - "sumaproxy2.sumaproxy.test"
 ----
 
-Procedure: Analyze new sync speed
+
+.Procedure: Analyzing New Sync Speed
 
 . Take a dump of the TCP traffic between {productname} and the involved systems.
-* On SUSE Manager Server:
+* On {productname} Server:
 +
 ----
 tcpdump -i ethX -s 200 host <ip-address-of-susemanagerproxy> and not ssh
 ----
 +
-* On SUSE Manager Proxy:
+* On {productname} Proxy:
 +
 ----
 tcpdump -i ethX -s 200 host <ip-address-of-susemanager> and not ssh
@@ -109,7 +111,7 @@ cobbler sync
 . When {command]``cobbler sync`` is finished, stop the TCPdumps.
 . Open the TCPdumps using Wireshark, go to [guimenu]``Statistics > Conversations`` and wait for the dump to be analyzed.
 . Switch to the TCP tab.
-  The number shown on this tab gives the total number of conversations captured between SUSE Manager and SUSE Manager Proxy.
+  The number shown on this tab gives the total number of conversations captured between {productname} Server and {productname} Proxy.
 . Look for the column [guimenu]``Duration``.
 * Start by sorting in ascending order to find out the minimal amount of time it took to transfer a file.
 * Continue by sorting in descending order to find out the maximum values for the big files, for example kernel and initrd transfers.
