--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -575,7 +575,7 @@ For more information about configuring all available options, see xref:specializ
 By default, {productname} does not provide any certificates for securing monitoring configuration.
 For providing security, you can generate or import custom certificates, self-signed or signed by a third party certificate authority (CA).
 
-This section demonstrates how to generate client/server certificates for Prometheus and Node exporter minions self-signed with SUSE Manager CA.
+This section demonstrates how to generate client/server certificates for Prometheus and Node exporter minions self-signed with {productname} CA.
 
 .Procedure: Creating server/client TLS certificate
 
