--- a/modules/quickstart/pages/legacy-installation/quickstart-install-uyuni-proxy.adoc
+++ b/modules/quickstart/pages/legacy-installation/quickstart-install-uyuni-proxy.adoc
@@ -211,7 +211,7 @@ Use this option if you want to reuse a SSH key that was used for SSH-Push Salt c
 Create and Populate Configuration Channel rhn_proxy_config_1000010001?::
 Accept default ``Y``.
 
-SUSE Manager Username::
+{productname} Username::
 Use same user name and password as on the {productname} server.
 
 If parts are missing, such as CA key and public certificate, the script prints commands that you must execute to integrate the needed files.
