--- a/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
@@ -91,3 +91,6 @@ mgr-storage-server $device
 ----
 +
 Ensure [literal]``$device`` points to the fast, persistent storage.
+
+
+For more information, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#_persistent_volumes[Persistent Volumes].
