Replacing product version with the parameter - pt1.

--- a/modules/administration/pages/iss.adoc
+++ b/modules/administration/pages/iss.adoc
@@ -5,7 +5,7 @@ ifeval::[{suma-content} == true]
 
 [WARNING]
 ====
-Starting with {productname} 5.0, the Inter-Server Synchronization (Version 1) feature will be deprecated and subsequently removed in future versions.
+Starting with {productname} {productnumber}, the Inter-Server Synchronization (Version 1) feature will be deprecated and subsequently removed in future versions.
 ====
 
 endif::[]
