--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -228,7 +228,7 @@ AppStream repositories are natively supported throughout the {webui}.
 endif::[]
 
 ifeval::[{suma-content} == true]
-Since {productname} 5.0, AppStream repositories are natively supported throughout the {webui}.
+Since {productname} {productnumber}, AppStream repositories are natively supported throughout the {webui}.
 endif::[]
 
 Therefore, this process is not mandatory to work with AppStream repositories.
