proper use of mgradm/mgrpxy

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -71,7 +71,7 @@ Certificates signed with different CAs do not match.
 
 [IMPORTANT]
 ====
-The following procedure needs to run inside of the container. 
+The following procedure needs to run inside of the container.
 Use [literal]``mgrctl term`` to open a terminal in the container before you execute it.
 ====
 
@@ -81,7 +81,7 @@ To replace the certificates, you can replace the installed CA certificate with t
 
 .Procedure: Replacing Existing Certificates
 
-. On the {productname} Server, at the command prompt, call the command `mgr-ssl-cert-setup` and provide the certificates as parameters:
+. On the {productname} container host, at the command prompt, call the command `mgr-ssl-cert-setup` and provide the certificates as parameters:
 +
 ----
 mgrctl exec -- mgr-ssl-cert-setup --root-ca-file=<Path_to_Root_CA_Certificate> --server-cert-file=<Server_Cert_File> --server-key-file=<Server_Key_File>
@@ -96,15 +96,13 @@ This command performs a number of tests on the provided files to test if they ar
 . Restart services to pick up the changes:
 +
 ----
-mgrctl exec -- spacewalk-service stop
-mgrctl exec -- systemctl restart postgresql.service
-mgrctl exec -- spacewalk-service start
+mgradm restart
 ----
 
 
 If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their host names and cnames.
-You should use [command]``mgr-ssl-cert-setup`` also on a {productname} Proxy to replace the certificates.
-Because the {productname} Proxy does not have a {postgresql} database, only [command]``spacewalk-service restart`` is sufficient.
+You should use [command]``mgr-ssl-cert-setup`` also on a {productname} Proxy container host to replace the certificates.
+On {productname} Proxy,[command]``mgrpxy restart``.
 
 If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
