--- a/modules/retail/pages/retail-deploy-terminals-auto.adoc
+++ b/modules/retail/pages/retail-deploy-terminals-auto.adoc
@@ -2,7 +2,7 @@
 = Deploy Terminals and Auto-Accept Keys
 
 You can configure {productname} to automatically accept the keys of newly deployed terminals.
-This is achieved using Salt grains.
+This is achieved using {salt} grains.
 
 [IMPORTANT]
 ====
@@ -15,7 +15,7 @@ There are three different ways you can configure auto-signed grains:
 * Configure {saltboot} to send automatically signed grains once and then delete them.
   To do this, append the {saltboot} configuration to an existing ``initrd``.
   For more information, see xref:retail:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.once[].
-* Choose to keep the automatically signed grains on the Salt client.
+* Choose to keep the automatically signed grains on the {salt} client.
   To do this, include the configuration file in the image source before the client image is built.
   After booting, the auto-signed grain is stored on the client as a regular Salt grain.
   For more information, see xref:retail:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.keep[].
@@ -23,7 +23,8 @@ There are three different ways you can configure auto-signed grains:
   For more information, see xref:retail:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.pxe[].
 
 
-When you have configured {saltboot} using one of these methods, you need to configure the {productname} Server to accept them. For more information, see xref:retail:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.server[].
+When you have configured {saltboot} using one of these methods, you need to configure the {productname} Server to accept them.
+For more information, see xref:retail:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.server[].
 
 
 [[retail.deployterminals.auto.server]]
@@ -36,11 +37,14 @@ You can enable auto-signing by creating an auto-sign file that contains the key 
 
 
 .Procedure: Configuring the Server to Auto-Accept
-. On the {productname} Server, create file [path]``autosign_grains.conf`` and add this line:
+
+. On the {productname} container host, create file [path]``autosign_grains.conf`` and add this line:
 +
 ----
 autosign_grains_dir: /etc/salt/autosign_grains
 ----
++
+// FIXME: also on container host, where dir does not matter?
 . Create a file at [path]``/etc/salt/autosign_grains/autosign_key``, that contains the auto-sign key you specified with {saltboot}:
 +
 ----
@@ -48,7 +52,7 @@ autosign_grains_dir: /etc/salt/autosign_grains
 ----
 +
 For multiple keys, put each one on a new line.
-. Push new files using [systemitem]``mgrclt cp`` command:
+. Push new files into the container using [command]``mgrctl``:
 +
 ----
 mgrctl exec mkdir /etc/salt/autosign_grains
@@ -132,6 +136,5 @@ tar -czf autosign-grains.tgz etc
 ----
 SALT_AUTOSIGN_GRAINS=autosign_key:<AUTOSIGN_KEY>
 ----
-. PXE boot the Salt client.
+. PXE boot the {salt} client.
   The formula creates the [path]``./etc/salt/minion.d/autosign-grains-onetime.conf`` configuration file and passes it to ``initrd``.
-
