create files directly in the container

--- a/modules/retail/pages/retail-deploy-terminals-auto.adoc
+++ b/modules/retail/pages/retail-deploy-terminals-auto.adoc
@@ -38,27 +38,33 @@ You can enable auto-signing by creating an auto-sign file that contains the key 
 
 .Procedure: Configuring the Server to Auto-Accept
 
-. On the {productname} container host, create file [path]``autosign_grains.conf`` and add this line:
+. At the command prompt of the {productname} container host, as root, enter the server container:
++
+
+----
+mgrctl term
+----
+
+. Inside the container, execute the following steps:
++
+
+--
+.. In directory [path]``/etc/salt/master.d/``, create file [path]``autosign_grains.conf`` and specify [option]``autosign_grains_dir``:
 +
 ----
-autosign_grains_dir: /etc/salt/autosign_grains
+echo "autosign_grains_dir: /etc/salt/autosign_grains" \
+  > /etc/salt/master.d/autosign_grains.conf
 ----
-+
-// FIXME: also on container host, where dir does not matter?
-. Create a file at [path]``/etc/salt/autosign_grains/autosign_key``, that contains the auto-sign key you specified with {saltboot}:
+
+.. Create a file at [path]``/etc/salt/autosign_grains/autosign_key``, that contains the auto-sign key you specified with {saltboot} (replace [literal]``<AUTOSIGN_KEY>`` with the key:
 +
 ----
-<AUTOSIGN_KEY>
+mkdir /etc/salt/autosign_grains
+echo "<AUTOSIGN_KEY>" > /etc/salt/autosign_grains/autosign_key
 ----
 +
 For multiple keys, put each one on a new line.
-. Push new files into the container using [command]``mgrctl``:
-+
-----
-mgrctl exec mkdir /etc/salt/autosign_grains
-mgrctl cp autosign_grains.conf server:/etc/salt/master.d/
-mgrctl cp autosign_key server:/etc/salt/autosign_grains/
-----
+--
 
 
 For more information about configuring the server to automatically accept grains, see https://docs.saltstack.com/en/latest/topics/tutorials/autoaccept_grains.html.
