--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -41,7 +41,9 @@ For more information about using multiple servers, see xref:specialized-guides:l
 . By default, the [guimenu]``Disable SSH Strict Key Host Checking`` checkbox is selected.
     This allows the bootstrap process to automatically accept SSH host keys without requiring you to manually authenticate.
 . OPTIONAL: Check the [guimenu]``Manage System Completely via SSH`` checkbox.
-    If you check this option, the client is configured to use SSH for its connection to the server, and no other connection method is configured.
+    If you check this option, the client is configured to use SSH for its connection to the server, and no other contact method is configured.
++
+For more information about contact methods, see xref:client-configuration:contact-methods-intro.adoc[].
 . Click btn:[Bootstrap] to begin registration.
 . When the bootstrap process has completed, your client is listed at menu:Systems[System List].
 
