Improve proxy part (per feedback)

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -103,8 +103,8 @@ mgradm restart
 
 
 If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their host names and cnames.
-You should use [command]``mgr-ssl-cert-setup`` also on a {productname} Proxy container host to replace the certificates.
-On {productname} Proxy,[command]``mgrpxy restart``.
+You should similarily run [command]``mgr-ssl-cert-setup`` inside a {productname} Proxy container to replace the certificates.
+To restart the Proxy, on {productname} Proxy container host, call [command]``mgrpxy restart``.
 
 If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
