--- a/modules/client-configuration/pages/registration-overview.adoc
+++ b/modules/client-configuration/pages/registration-overview.adoc
@@ -12,6 +12,15 @@ Before you begin, check that:
   For more information about creating activation keys, see xref:client-configuration:activation-keys.adoc[].
 
 
+.Handling the Installation Channel after Bootstrapping
+[IMPORTANT]
+====
+Once a client system has been bootstrapped, the installation channel should be removed. The standard update channel already includes the necessary updates, making this channel redundant.
+
+Additionally, during migrations, this channel is unnecessary and should not be used.
+====
+
+
 [IMPORTANT]
 ====
 Do not register the {productname} Server base OS to {productname} itself.
