check DB password https://bugzilla.suse.com/show_bug.cgi?id=1232836 https://github.com/SUSE/spacewalk/issues/25877

--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -69,6 +69,10 @@ You also need to have saved a copy of the ``id-susemanager`` key.
 You also need to back up your database, which you can do with the [command]``smdba`` tool.
 ====
 
+[NOTE]
+====
+If you are only backing up and restoring the DB and excluding the copying of the above directories and files you will need to check the [literal]``report_db_password`` on the new server to ensure it is correct.
+====
 
 
 .Procedure: Restoring from a Manual Backup
@@ -196,7 +200,7 @@ chown postgres:postgres /var/spacewalk/db-backup
 smdba backup-hot --enable=on --backup-dir=/var/spacewalk/db-backup
 ----
 +
-This command produces debug messages and finishes sucessfully with the output:
+This command produces debug messages and finishes successfully with the output:
 +
 ----
 INFO: Finished
