--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -104,6 +104,12 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 
+| {oes} 24.4, 23.4
+| {check}
+| {cross}
+| {cross}
+| {cross}
+
 | {oracle} 9, 8, 7
 | {check}
 | {cross}
@@ -224,6 +230,13 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 
 | {openeuler} 22.03
+| {check}
+| {cross}
+| {cross}
+| {cross}
+| {cross}
+
+| {oes} 24.4, 23.4
 | {check}
 | {cross}
 | {cross}
