--- a/modules/client-configuration/pages/channels.adoc
+++ b/modules/client-configuration/pages/channels.adoc
@@ -23,10 +23,10 @@ You can modify or create new channels by navigating to menu:Software[Manage > Ch
 
 For more on using channels, including custom channels, see xref:administration:channel-management.adoc[].
 
-.Handling the Installation Channel after Bootstrapping
+.Handling the Installer Updates Channel after Bootstrapping
 [IMPORTANT]
 ====
-Once a client system has been bootstrapped, the installation channel should be removed. The standard update channel already includes the necessary updates, making this channel redundant.
+Once a client system has been bootstrapped, the **Installer Updates** channel should be removed. The standard update channel already includes the necessary updates, making this channel redundant.
 
 Additionally, during migrations, this channel is unnecessary and should not be used.
 ====
