create and populate other oes files

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -35,6 +35,7 @@ ifeval::[{uyuni-content} == true]
 *** xref:supported-features-openeuler.adoc[openEuler Supported Features]
 endif::[]
 
+*** xref:supported-features-oes.adoc[OES Supported Features]
 *** xref:supported-features-oracle.adoc[Oracle Supported Features]
 
 ifeval::[{uyuni-content} == true]
@@ -97,6 +98,8 @@ ifeval::[{uyuni-content} == true]
 **** xref:clients-openeuler.adoc[OpenEuler Clients]
 endif::[]
 
+*** xref:registration-overview-oes.adoc[OES Client Registration]
+**** xref:clients-oes.adoc[Open Enterprise Server Clients]
 *** xref:registration-overview-oracle.adoc[Oracle Client Registration]
 **** xref:clients-oracle.adoc[Oracle Clients]
 
