--- a/modules/client-configuration/pages/clients-oes.adoc
+++ b/modules/client-configuration/pages/clients-oes.adoc
@@ -1,5 +1,5 @@
-[[clients-sle]]
-= Registering {sle} Clients
+[[clients-oes]
+= Registering {oes} Clients
 
 This section contains information about registering clients running {oes} operating systems.
 
@@ -43,26 +43,12 @@ The channels you need for this procedure are:
 | OS Version
 | Base Channel
 
-| {sles} 15 SP6
-| sle-product-sles15-sp6-pool-x86_64
+| {oes} 24.4
+| 
 
-| {sles} 15 SP5
-| sle-product-sles15-sp5-pool-x86_64
+| {oes} 23.4
+| 
 
-| {sles} 15 SP4
-| sle-product-sles15-sp4-pool-x86_64
-
-| {sles} 15 SP3
-| sle-product-sles15-sp3-pool-x86_64
-
-| {sles} 15 SP2
-| sle-product-sles15-sp2-pool-x86_64
-
-| {sles} 15 SP1
-| sle-product-sles15-sp1-pool-x86_64
-
-| {sles} 12 SP5
-| sle-product-sles15-sp5-pool-x86_64
 |===
 
 To find channel names of older products, at the command prompt on the {productname} Server, as root, use the [command]``mgr-sync`` command:
@@ -86,34 +72,20 @@ ifeval::[{uyuni-content} == true]
 
 To add the client tools, add these channels from the command prompt:
 
-[[sle-tools-channels-cli]]
+[[oes-tools-channels-cli]]
 [cols="1,1", options="header"]
-.SUSE Linux Enterprise Channels - CLI
+.Open Enterprise Channels - CLI
 |===
 
 | OS Version
 | Client Channel
 
-| {sles} 15 SP6
-| sles15-sp6-uyuni-client
+| {oes} 24.4
+| 
 
-| {sles} 15 SP5
-| sles15-sp5-uyuni-client
+| {oes} 23.4
+| 
 
-| {sles} 15 SP4
-| sles15-sp4-uyuni-client
-
-| {sles} 15 SP3
-| sles15-sp3-uyuni-client
-
-| {sles} 15 SP2
-| sles15-sp2-uyuni-client
-
-| {sles} 15 SP1
-| sles15-sp1-uyuni-client
-
-| {sles} 12 SP5
-| sles12-sp5-uyuni-client
 |===
 
 
@@ -166,11 +138,13 @@ Because a software channel cannot be used when the GPG key is not trusted, the d
 
 For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc[].
 
+////
 [NOTE]
 ====
 Use the same GPG key for both {sles}{nbsp}15 and {sles}{nbsp}12 clients.
 The correct key is called ``sle12-gpg-pubkey-39db7c82.key``.
 ====
+////
 
 endif::[]
 
