--- a/modules/client-configuration/pages/clients-oes.adoc
+++ b/modules/client-configuration/pages/clients-oes.adoc
@@ -1,4 +1,4 @@
-[[clients-oes]
+[[clients-oes]]
 = Registering {oes} Clients
 
 This section contains information about registering clients running {oes} operating systems.
