--- a/modules/client-configuration/pages/clients-oes.adoc
+++ b/modules/client-configuration/pages/clients-oes.adoc
@@ -22,10 +22,10 @@ The products you need for this procedure are:
 | Product Name
 
 | {oes} 24.4
-| Open Enterprise Server 24.4
+| Open Enterprise Server 24.4 x86_64
 
 | {oes} 23.4
-| Open Enterprise Server 23.4
+| Open Enterprise Server 23.4 x86_64
 
 |===
 
