--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -222,7 +222,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {cross}
 
-| {debian} 12, 11
+| {debian} 12, 11 (*)
 | {check}
 | {cross}
 | {cross}
