update proxy case (with cfg tarball)
per feedback

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -34,7 +34,7 @@ After you have completed the initial setup, you can replace the default certific
 .Procedure: Import Certificates on a New {productname} Server
 
 . Deploy the {productname} Server according to the instructions in xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
-  Make sure to pass the correct files as parameters to [literal]``mgradm install podman``. 
+  Make sure to pass the correct files as parameters to [literal]``mgradm install podman``.
   The parameters are:
 +
 ----
@@ -103,8 +103,16 @@ mgradm restart
 
 
 If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their host names and cnames.
-You should similarily run [command]``mgr-ssl-cert-setup`` inside a {productname} Proxy container to replace the certificates.
-To restart the Proxy, on {productname} Proxy container host, call [command]``mgrpxy restart``.
+Generate a new configuration tarball and deploy it:
+
+ifeval::[{suma-content} == true]
+For more information, see xref:installation-and-upgrade:container-deployment/suma/proxy-deployment-suma.adoc#_generate_proxy_configuration[].
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+For more information, see xref:installation-and-upgrade:container-deployment/uyuni/proxy-deployment-uyuni.adoc#proxy-setup-containers-generate-config[].
+proxy-deployment-uyuni.adoc
+endif::[]
 
 If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
