per feedback use copied ca files

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -81,12 +81,20 @@ To replace the certificates, you can replace the installed CA certificate with t
 
 .Procedure: Replacing Existing Certificates
 
-. On the {productname} container host, at the command prompt, call the following command to run [command]``mgr-ssl-cert-setup`` inside the container and provide the certificates as parameters:
+. On the {productname} container host, at the command prompt, copy the certificate files to the container:
++
+
+----
+for f in <Root_CA_Certificate> <Server_Cert_File> <Server_Key_File>; do
+  mgrctl cp $f server:/tmp
+done
+----
+
+. On the {productname} container host, call the following command to run [command]``mgr-ssl-cert-setup`` inside the container providing certificates as parameters:
 +
 ----
-mgrctl exec -ti -- mgr-ssl-cert-setup \
-  --root-ca-file=<Path_to_Root_CA_Certificate> \
-  --server-cert-file=<Server_Cert_File> --server-key-file=<Server_Key_File>
+mgrctl exec -ti -- mgr-ssl-cert-setup  --root-ca-file=/tmp/<Root_CA_Certificate> \
+  --server-cert-file=/tmp/<Server_Cert_File>  --server-key-file=/tmp/<Server_Key_File>
 ----
 
 
