--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -81,7 +81,7 @@ To replace the certificates, you can replace the installed CA certificate with t
 
 .Procedure: Replacing Existing Certificates
 
-. On the {productname} container host, at the command prompt, copy the certificate files to the container:
+. On the {productname} container host, at the command prompt, temporarily copy the certificate files to the container:
 +
 
 ----
@@ -93,8 +93,16 @@ done
 . On the {productname} container host, call the following command to run [command]``mgr-ssl-cert-setup`` inside the container providing certificates as parameters:
 +
 ----
-mgrctl exec -ti -- mgr-ssl-cert-setup  --root-ca-file=/tmp/<Root_CA_Certificate> \
-  --server-cert-file=/tmp/<Server_Cert_File>  --server-key-file=/tmp/<Server_Key_File>
+mgrctl exec -ti -- mgr-ssl-cert-setup --root-ca-file=/tmp/<Root_CA_Certificate> \
+  --server-cert-file=/tmp/<Server_Cert_File> --server-key-file=/tmp/<Server_Key_File>
+----
+
+. Remove the temporarily copied files from the container:
++
+
+----
+mgrctl exec -ti -- rm /tmp/<Root_CA_Certificate> /tmp/<Server_Cert_File> \
+  /tmp/<Server_Key_File>
 ----
 
 
