--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -36,7 +36,7 @@ After you have completed the initial setup, you can replace the default certific
 .Procedure: Import Certificates on a New {productname} Server
 
 . Deploy the {productname} Server according to the instructions in xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
-  Make sure to pass the correct files as parameters to [literal]``mgradm install podman``. 
+  Make sure to pass the correct files as parameters to [literal]``mgradm install podman``.
   The parameters are:
 +
 ----
@@ -73,7 +73,7 @@ Certificates signed with different CAs do not match.
 
 [IMPORTANT]
 ====
-The following procedure needs to run inside of the container. 
+The following procedure needs to run inside of the container.
 Use [literal]``mgrctl term`` to open a terminal in the container before you execute it.
 ====
 
@@ -83,10 +83,28 @@ To replace the certificates, you can replace the installed CA certificate with t
 
 .Procedure: Replacing Existing Certificates
 
-. On the {productname} Server, at the command prompt, call the command `mgr-ssl-cert-setup` and provide the certificates as parameters:
+. On the {productname} container host, at the command prompt, temporarily copy the certificate files to the container:
++
+
+----
+for f in <Root_CA_Certificate> <Server_Cert_File> <Server_Key_File>; do
+  mgrctl cp $f server:/tmp
+done
+----
+
+. On the {productname} container host, call the following command to run [command]``mgr-ssl-cert-setup`` inside the container providing certificates as parameters:
 +
 ----
-mgrctl exec -- mgr-ssl-cert-setup --root-ca-file=<Path_to_Root_CA_Certificate> --server-cert-file=<Server_Cert_File> --server-key-file=<Server_Key_File>
+mgrctl exec -ti -- mgr-ssl-cert-setup --root-ca-file=/tmp/<Root_CA_Certificate> \
+  --server-cert-file=/tmp/<Server_Cert_File> --server-key-file=/tmp/<Server_Key_File>
+----
+
+. Remove the temporarily copied files from the container:
++
+
+----
+mgrctl exec -ti -- rm /tmp/<Root_CA_Certificate> /tmp/<Server_Cert_File> \
+  /tmp/<Server_Key_File>
 ----
 
 
@@ -98,15 +116,21 @@ This command performs a number of tests on the provided files to test if they ar
 . Restart services to pick up the changes:
 +
 ----
-mgrctl exec -- spacewalk-service stop
-mgrctl exec -- systemctl restart postgresql.service
-mgrctl exec -- spacewalk-service start
+mgradm restart
 ----
 
 
 If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their host names and cnames.
-You should use [command]``mgr-ssl-cert-setup`` also on a {productname} Proxy to replace the certificates.
-Because the {productname} Proxy does not have a postgreSQL database, only [command]``spacewalk-service restart`` is sufficient.
+Generate a new configuration tarball and deploy it:
+
+ifeval::[{suma-content} == true]
+For more information, see xref:installation-and-upgrade:container-deployment/suma/proxy-deployment-suma.adoc#_generate_proxy_configuration[].
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+For more information, see xref:installation-and-upgrade:container-deployment/uyuni/proxy-deployment-uyuni.adoc#proxy-setup-containers-generate-config[].
+proxy-deployment-uyuni.adoc
+endif::[]
 
 If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
