--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
@@ -216,6 +216,7 @@ For more information, see
 
 
 
+// FIXME 2024-12-10, ke: use the snippet also here (see suma equiv)
 [[proxy-setup-containers-generate-config]]
 == Generate the Proxy Configuration
 
