--- a/modules/client-configuration/pages/clients-oes.adoc
+++ b/modules/client-configuration/pages/clients-oes.adoc
@@ -35,19 +35,29 @@ include::snippets/addchannels_vendor_webui.adoc[]
 Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
 
+// "channel_label": "oes23.4-pool-x86_64"
+// "channel_name": "OES23.4-Pool for x86_64",
+//
+// 24.4:
+// "channel_label": "oes24.4-pool-x86_64",
+// "channel_name": "OES24.4-Pool for x86_64",
+
 [[oes-channels-cli]]
-[cols="1,1", options="header"]
+[cols="1,1,1", options="header"]
 .OES Products - CLI
 |===
 
 | OS Version
 | Base Channel
+| Name
 
 | {oes} 24.4
-| 
+| oes24.4-pool-x86_64
+| OES24.4-Pool for x86_64
 
 | {oes} 23.4
-| 
+| oes23.4-pool-x86_64"
+| OES23.4-Pool for x86_64
 
 |===
 
@@ -72,19 +82,38 @@ ifeval::[{uyuni-content} == true]
 
 To add the client tools, add these channels from the command prompt:
 
+
+
+// 24.4:
+// "channel_label": "oes24.4-sle-manager-tools15-pool-x86_64",
+// "channel_name": "OES24.4-SLE-Manager-Tools15-Pool for x86_64",
+// 
+// "channel_label": "oes24.4-sle-manager-tools15-updates-x86_64",
+// "channel_name": "OES24.4-SLE-Manager-Tools15-Updates for x86_64",
+// 
+// 23.4:
+// "channel_label": "oes23.4-sle-manager-tools15-pool-x86_64",
+// "channel_name": "OES23.4-SLE-Manager-Tools15-Pool for x86_64",
+// 
+// "channel_label": "oes23.4-sle-manager-tools15-updates-x86_64",
+// "channel_name": "OES23.4-SLE-Manager-Tools15-Updates for x86_64",
+
 [[oes-tools-channels-cli]]
-[cols="1,1", options="header"]
+[cols="1,1,1", options="header"]
 .Open Enterprise Channels - CLI
 |===
 
 | OS Version
 | Client Channel
+| Updates
 
 | {oes} 24.4
-| 
+| oes24.4-sle-manager-tools15-pool-x86_64
+| oes24.4-sle-manager-tools15-updates-x86_64
 
 | {oes} 23.4
-| 
+| oes23.4-sle-manager-tools15-pool-x86_64
+| oes23.4-sle-manager-tools15-updates-x86_64
 
 |===
 
