compere with sles

--- a/modules/client-configuration/pages/supported-features-oes.adoc
+++ b/modules/client-configuration/pages/supported-features-oes.adoc
@@ -102,8 +102,8 @@ The icons in this table indicate:
 | {check}
 
 | Contact methods
-| {check} ZeroMQ, Salt-SSH
-| {check} ZeroMQ, Salt-SSH
+| {cross}
+| {cross}
 
 | Works with {productname} Proxy
 | {check}
@@ -178,12 +178,12 @@ The icons in this table indicate:
 | {check}
 
 | Kiwi buildhost
-| {check}
+| {question}
 | {question}
 
 | Build Kiwi image with OS
-| {check}
-| {cross}
+| {question}
+| {question}
 
 | Recurring Actions
 | {check}
@@ -194,7 +194,7 @@ The icons in this table indicate:
 | N/A
 
 | Yomi
-| {cross}
+| {check}
 | {check}
 
 |===
