--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -23,6 +23,7 @@ endif::[]
 *** xref:supported-features-amazon.adoc[Amazon Linux Supported Features]
 *** xref:supported-features-centos.adoc[CentOS Supported Features]
 *** xref:supported-features-debian.adoc[Debian Supported Features]
+*** xref:supported-features-oes.adoc[OES Supported Features]
 *** xref:supported-features-oracle.adoc[Oracle Supported Features]
 *** xref:supported-features-rh.adoc[Red Hat Supported Features]
 *** xref:supported-features-rocky.adoc[Rocky Linux Supported Features]
@@ -69,6 +70,8 @@ endif::[]
 **** xref:clients-centos.adoc[CentOS Clients]
 *** xref:registration-overview-debian.adoc[Debian Client Registration]
 **** xref:clients-debian.adoc[Debian Clients]
+*** xref:registration-overview-oes.adoc[OES Client Registration]
+**** xref:clients-oes.adoc[Open Enterprise Server Clients]
 *** xref:registration-overview-oracle.adoc[Oracle Client Registration]
 **** xref:clients-oracle.adoc[Oracle Clients]
 *** xref:registration-overview-redhat.adoc[Red Hat Client Registration]
