--- a/modules/client-configuration/pages/supported-features-oes.adoc
+++ b/modules/client-configuration/pages/supported-features-oes.adoc
@@ -12,9 +12,11 @@ The operating system you run on a client is supported by the organization that s
 
 The icons in this table indicate:
 
-* {check} the feature is available
+* {check} the feature is available on both Salt and traditional clients
 * {cross} the feature is not available
 * {question} the feature is under consideration, and may or may not be made available at a later date
+* {trad} the feature is supported only on traditional clients
+* {salt} the feature is supported only on Salt clients.
 
 
 [cols="1,1,1", options="header"]
@@ -50,20 +52,20 @@ The icons in this table indicate:
 | {check}
 
 | System package states
-| {check}
-| {check}
+| {salt}
+| {salt}
 
 | System custom states
-| {check}
-| {check}
+| {salt}
+| {salt}
 
 | Group custom states
-| {check}
-| {check}
+| {salt}
+| {salt}
 
 | Organization custom states
-| {check}
-| {check}
+| {salt}
+| {salt}
 
 | System set manager (SSM)
 | {check}
@@ -78,20 +80,20 @@ The icons in this table indicate:
 | {check}
 
 | Advanced Virtual Guest Management {star}
-| {check}
-| {check}
+| {salt}
+| {salt}
 
 | Virtual Guest Installation ({ay}), as Host OS
-| {cross}
-| {cross}
+| {trad}
+| {trad}
 
 | Virtual Guest Installation (image template), as Host OS
-| {check}
-| {check}
+| {salt}
+| {salt}
 
 | Virtual Guest Management
-| {check}
-| {check}
+| {salt}
+| {salt}
 
 | System deployment (PXE/{ay})
 | {check}
@@ -102,8 +104,8 @@ The icons in this table indicate:
 | {check}
 
 | Contact methods
-| {cross}
-| {cross}
+| {trad}: OSAD, RHNSD, SSH-push. {salt}: ZeroMQ, Salt-SSH
+| {trad}: OSAD, RHNSD, SSH-push. {salt}: ZeroMQ, Salt-SSH
 
 | Works with {productname} Proxy
 | {check}
@@ -130,52 +132,52 @@ The icons in this table indicate:
 | {check}
 
 | Package verification
-| {cross}
-| {cross}
+| {trad}
+| {trad}
 
 | Package locking
-| {check}
-| {check}
+| {salt}
+| {salt}
 
 | System locking
-| {cross}
-| {cross}
+| {trad}
+| {trad}
 
 | Maintenance Windows
 | {check}
 | {check}
 
 | System snapshot
-| {cross}
-| {cross}
+| {trad}
+| {trad}
 
 | Configuration file management
 | {check}
 | {check}
 
 | Package profiles
-| {check} Profiles supported, Sync not supported
-| {check} Profiles supported, Sync not supported
+| {trad}. {salt}:  Profiles supported, Sync not supported
+| {trad}. {salt}:  Profiles supported, Sync not supported
 
 | Power management
 | {check}
 | {check}
 
 | Monitoring server
-| {check}
-| {check}
+| {salt}
+| {salt}
 
 | Monitored clients
-| {check}
-| {check}
+| {salt}
+| {salt}
 
 | Docker buildhost
-| {check}
-| {check}
+| {salt}
+| {salt}
 
 | Build Docker image with OS
-| {check}
-| {check}
+| {salt}
+| {salt}
 
 | Kiwi buildhost
 | {question}
@@ -186,8 +188,8 @@ The icons in this table indicate:
 | {question}
 
 | Recurring Actions
-| {check}
-| {check}
+| {salt}
+| {salt}
 
 | AppStreams
 | N/A
