added info on removal of installation channel on bootstrapped clients… (#3538)
* added info on removal of installation channel on bootstrapped clients to prevent issues

* update

--- a/modules/client-configuration/pages/channels.adoc
+++ b/modules/client-configuration/pages/channels.adoc
@@ -23,7 +23,13 @@ You can modify or create new channels by navigating to menu:Software[Manage > Ch
 
 For more on using channels, including custom channels, see xref:administration:channel-management.adoc[].
 
+.Handling the Installer Updates Channel after Bootstrapping
+[IMPORTANT]
+====
+Once a client system has been bootstrapped, the **Installer Updates** channel should be removed. The standard update channel already includes the necessary updates, making this channel redundant.
 
+Additionally, during migrations, this channel is unnecessary and should not be used.
+====
 
 == Packages Provided by {phub}
 
