update saltstack references

--- a/modules/administration/pages/master-fingerprint.adoc
+++ b/modules/administration/pages/master-fingerprint.adoc
@@ -49,4 +49,4 @@ systemctl restart venv-salt-minion
 
 For more information about {salt} Bundle, see xref:client-configuration:contact-methods-saltbundle.adoc[].
 
-For information on configuring security from a client, see https://docs.saltstack.com/en/latest/ref/configuration/minion.html.
+For information on configuring security from a client, see https://docs.saltproject.io/en/latest/ref/configuration/minion.html.
