--- a/modules/client-configuration/pages/contact-methods-saltssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh.adoc
@@ -159,5 +159,5 @@ These features do not work on Salt SSH clients:
 
 For more information:
 
-* about Salt SSH in general, see xref:specialized-guides:salt/salt-ssh.adoc[] and https://docs.saltstack.com/en/latest/topics/ssh/.
+* about Salt SSH in general, see xref:specialized-guides:salt/salt-ssh.adoc[] and https://docs.saltproject.io/en/latest/topics/ssh/.
 * about SSH key rotation, see xref:specialized-guides:salt/salt-ssh.adoc#salt.ssh.key_rotation[].
