--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -120,4 +120,4 @@ systemctl restart salt-minion
 salt-key -a '<client>'
 ----
 
-For more information about the Salt minion configuration file, see https://docs.saltproject.io/en/latest/contents.html[Salt Project Documentation].
+For more information about the Salt minion configuration file, see https://docs.saltproject.io/en/latest/ref/configuration/minion.html[Salt Project Documentation: Minion Configuration].
