--- a/modules/retail/pages/retail-deploy-terminals-auto.adoc
+++ b/modules/retail/pages/retail-deploy-terminals-auto.adoc
@@ -67,7 +67,7 @@ For multiple keys, put each one on a new line.
 --
 
 
-For more information about configuring the server to automatically accept grains, see https://docs.saltstack.com/en/latest/topics/tutorials/autoaccept_grains.html.
+For more information about configuring the server to automatically accept grains, see https://docs.saltproject.io/en/latest/topics/tutorials/autoaccept_grains.html.
 
 
 
