--- a/modules/specialized-guides/pages/large-deployments/tuning.adoc
+++ b/modules/specialized-guides/pages/large-deployments/tuning.adoc
@@ -566,7 +566,7 @@ If you see lines containing ``LOG:  temporary file:`` try raising this parameter
 | Location             | [path]``/etc/salt/master.d/susemanager.conf``, in the `rest_cherrypy` section.
 | Example              | `thread_pool: 100`
 | After changing       | Check xref:worker-threads[`worker_threads`] for adjustment.
-| More information     | https://docs.saltstack.com/en/latest/ref/netapi/all/salt.netapi.rest_cherrypy.html#performance-tuning
+| More information     | https://docs.saltproject.io/en/latest/ref/netapi/all/salt.netapi.rest_cherrypy.html#performance-tuning
 |===
 
 
@@ -587,7 +587,7 @@ If you see lines containing ``LOG:  temporary file:`` try raising this parameter
 | After changing       | Check xref:memory-usage[memory usage].
                          Monitor memory usage closely before and after the change.
                          It makes sense to monitor the `salt-master` stats event by enabling `master_stats` and adjusting `master_stats_event_iter` to fine tune the value of this parameter.
-| More information     | https://docs.saltstack.com/en/latest/ref/configuration/master.html#worker-threads
+| More information     | https://docs.saltproject.io/en/latest/ref/configuration/master.html#worker-threads
 |===
 
 
@@ -637,7 +637,7 @@ If you see lines containing ``LOG:  temporary file:`` try raising this parameter
 | Value recommendation | 10000-100000
 | Location             | [path]``/etc/salt/master.d/tuning.conf``
 | Example              | `pub_hwm: 10000`
-| More information     | https://docs.saltstack.com/en/latest/ref/configuration/master.html#pub-hwm, https://zeromq.org/socket-api/#high-water-mark
+| More information     | https://docs.saltproject.io/en/latest/ref/configuration/master.html#pub-hwm, https://zeromq.org/socket-api/#high-water-mark
 |===
 
 
@@ -652,7 +652,7 @@ If you see lines containing ``LOG:  temporary file:`` try raising this parameter
 | Value recommendation | 1000-5000
 | Location             | [path]``/etc/salt/master.d/tuning.conf``
 | Example              | `zmq_backlog: 2000`
-| More information     | https://docs.saltstack.com/en/latest/ref/configuration/master.html#zmq-backlog, http://api.zeromq.org/3-0:zmq-getsockopt (`ZMQ_BACKLOG`)
+| More information     | https://docs.saltproject.io/en/latest/ref/configuration/master.html#zmq-backlog, http://api.zeromq.org/3-0:zmq-getsockopt (`ZMQ_BACKLOG`)
 |===
 
 
