--- a/modules/specialized-guides/pages/salt/salt-command.adoc
+++ b/modules/specialized-guides/pages/salt/salt-command.adoc
@@ -83,7 +83,7 @@ ip -o -f inet addr show | awk '/scope global/ {print $4}'
 ----
 ////
 
-For more on targeting, see https://docs.saltstack.com/en/latest/topics/targeting/.
+For more on targeting, see https://docs.saltproject.io/en/latest/topics/targeting/.
 
 
 
@@ -96,7 +96,7 @@ Find which modules can be executed on the target:
 salt '*' sys.doc
 ----
 
-For a full list of callable modules, see https://docs.saltstack.com/en/latest/ref/modules/all/index.html.
+For a full list of callable modules, see https://docs.saltproject.io/en/latest/ref/modules/all/index.html.
 
 
 
