--- a/modules/specialized-guides/pages/salt/salt-config-modules.adoc
+++ b/modules/specialized-guides/pages/salt/salt-config-modules.adoc
@@ -18,9 +18,9 @@ You can use {uyuni} configuration modules to configure:
 * Activation Keys
 
 
-For more information about Salt execution modules, see https://docs.saltstack.com/en/latest/topics/tutorials/modules.html.
+For more information about Salt execution modules, see https://docs.saltproject.io/en/latest/topics/tutorials/modules.html.
 
-For more information about Salt state modules, see https://docs.saltstack.com/en/latest/topics/tutorials/starting_states.html.
+For more information about Salt state modules, see https://docs.saltproject.io/en/latest/topics/tutorials/starting_states.html.
 
 
 
