--- a/modules/specialized-guides/pages/salt/salt-formulas-custom.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formulas-custom.adoc
@@ -660,7 +660,7 @@ For example:
 {% from "map.jinja" import server, client with context %}
 ----
 
-For more information about conventions to use when writing formulas, see https://docs.saltstack.com/en/latest/topics/development/conventions/formulas.html.
+For more information about conventions to use when writing formulas, see https://docs.saltproject.io/en/latest/topics/development/conventions/formulas.html.
 
 
 
