--- a/modules/specialized-guides/pages/salt/salt-ssh.adoc
+++ b/modules/specialized-guides/pages/salt/salt-ssh.adoc
@@ -5,7 +5,7 @@
 Salt SSH allows Salt commands and states to be issued directly over SSH.
 SSH connections are created on demand, when the server executes an action on a client.
 
-For more information about Salt SSH, see https://docs.saltstack.com/en/latest/topics/ssh/.
+For more information about Salt SSH, see https://docs.saltproject.io/en/latest/topics/ssh/.
 
 
 
