--- a/modules/specialized-guides/pages/salt/salt-terminology.adoc
+++ b/modules/specialized-guides/pages/salt/salt-terminology.adoc
@@ -12,13 +12,13 @@ To use beacons on {sles} Salt clients, install the [package]``python-pyinotify``
 For {rhel} systems, install the [package]``python-inotify`` package.
 ====
 +
-For more information on beacons, see https://docs.saltstack.com/en/latest/topics/beacons/
+For more information on beacons, see https://docs.saltproject.io/en/latest/topics/beacons/
 
 Broker::
 The Salt broker allows clients to pass commands to each other.
 The broker acts like a switch, therefore peer communication will only work for clients on the same network, or connected to the same proxy.
 +
-For more information on Salt and peer communication, see https://docs.saltstack.com/en/latest/ref/peer.html.
+For more information on Salt and peer communication, see https://docs.saltproject.io/en/latest/ref/peer.html.
 
 Environment::
 {productname} implements Salt with a single environment.
@@ -36,7 +36,7 @@ Grains provide information about the hardware of a client.
 This includes the operating system, IP addresses, network interfaces, and memory.
 When you run a Salt command any modules and functions are run locally from the system being called.
 +
-For more information on grains, see https://docs.saltstack.com/en/latest/topics/grains/.
+For more information on grains, see https://docs.saltproject.io/en/latest/topics/grains/.
 
 Highstate::
 This term is used when you apply all outstanding states to all targeted clients at the same time.
@@ -62,7 +62,7 @@ Salt modules are stored on clients and the {productname} Server within the [path
 There are many types of Salt modules, including state and execution modules.
 You can write your own Salt modules using Python.
 +
-For a complete list of available Salt modules, see https://docs.saltstack.com/en/latest/ref/index.html.
+For a complete list of available Salt modules, see https://docs.saltproject.io/en/latest/ref/index.html.
 
 Pillars::
 Pillars are created on the {productname} Server.
@@ -70,7 +70,7 @@ They contain information about a client or group of clients.
 Pillars allow you to send confidential information to a targeted client or group of clients.
 Pillars are useful for sensitive data, configuration of clients, variables, and any arbitrary data.
 +
-For more information on pillars, see https://docs.saltstack.com/en/latest/topics/tutorials/pillar.html.
+For more information on pillars, see https://docs.saltproject.io/en/latest/topics/tutorials/pillar.html.
 
 States::
 States are configuration templates.
@@ -85,7 +85,7 @@ Update all other system packages using states.
 You can then update the [package]``salt`` package from the {productname} {webui} as a separate step.
 ====
 +
-For more information on states, see https://docs.saltstack.com/en/latest/topics/tutorials/starting_states.html.
+For more information on states, see https://docs.saltproject.io/en/latest/topics/tutorials/starting_states.html.
 
 
-For more Salt terminology, see https://docs.saltstack.com/en/latest/glossary.html.
+For more Salt terminology, see https://docs.saltproject.io/en/latest/glossary.html.
