--- a/modules/specialized-guides/pages/salt/salt-useful-commands.adoc
+++ b/modules/specialized-guides/pages/salt/salt-useful-commands.adoc
@@ -3,7 +3,7 @@
 
 
 This section contains the most commonly used Salt commands.
-For a complete list of available Salt commands, see https://docs.saltstack.com/en/latest/ref/cli/index.html.
+For a complete list of available Salt commands, see https://docs.saltproject.io/en/latest/ref/cli/index.html.
 
 
 salt-run::
