update saltstack url references across all docs

--- a/modules/administration/pages/master-fingerprint.adoc
+++ b/modules/administration/pages/master-fingerprint.adoc
@@ -29,4 +29,4 @@ master_finger: 'ba:30:65:2a:d6:9e:20:4f:d8:b2:f3:a7:d4:65:11:13'
 # systemctl restart salt-minion
 ----
 
-For information on configuring security from a client, see https://docs.saltstack.com/en/latest/ref/configuration/minion.html.
+For information on configuring security from a client, see https://docs.saltproject.io/en/latest/ref/configuration/minion.html.
