--- a/modules/client-configuration/pages/contact-methods-saltssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh.adoc
@@ -89,6 +89,6 @@ These features do not work on Salt SSH clients:
 
 === For more information
 
-* About Salt SSH in general, see xref:specialized-guides:salt/salt-ssh.adoc[] and https://docs.saltstack.com/en/latest/topics/ssh/.
+* About Salt SSH in general, see xref:specialized-guides:salt/salt-ssh.adoc[] and https://docs.saltproject.io/en/latest/topics/ssh/.
 * About SSH key rotation, see xref:specialized-guides:salt/salt-ssh.adoc#salt.ssh.key_rotation[].
 
