--- a/modules/client-configuration/pages/system-locking.adoc
+++ b/modules/client-configuration/pages/system-locking.adoc
@@ -51,7 +51,7 @@ The locking mechanism is not available for Salt SSH clients.
     The client remains locked until you remove the system lock formula.
 
 
-For more information about blackout mode in Salt, see https://docs.saltstack.com/en/latest/topics/blackout/index.html.
+For more information about blackout mode in Salt, see https://docs.saltproject.io/en/latest/topics/blackout/index.html.
 
 
 
