--- a/modules/specialized-guides/pages/salt/salt-large-scale-tuning.adoc
+++ b/modules/specialized-guides/pages/salt/salt-large-scale-tuning.adoc
@@ -496,7 +496,7 @@ This section contains information about the available parameters.
 | Location             | [path]``/etc/salt/master.d/susemanager.conf``, in the `rest_cherrypy` section.
 | Example              | `thread_pool: 100`
 | After changing       | Check xref:worker-threads[`worker_threads`] for adjustment.
-| More information     | https://docs.saltstack.com/en/latest/ref/netapi/all/salt.netapi.rest_cherrypy.html#performance-tuning
+| More information     | https://docs.saltproject.io/en/latest/ref/netapi/all/salt.netapi.rest_cherrypy.html#performance-tuning
 |===
 
 
@@ -515,7 +515,7 @@ This section contains information about the available parameters.
 | Example              | `worker_threads: 50`
 | After changing       | Check xref:memory-usage[memory usage].
                          Monitor memory usage closely before and after the change.
-| More information     | https://docs.saltstack.com/en/latest/ref/configuration/master.html#worker-threads
+| More information     | https://docs.saltproject.io/en/latest/ref/configuration/master.html#worker-threads
 |===
 
 
