--- a/modules/specialized-guides/pages/salt/salt-overview.adoc
+++ b/modules/specialized-guides/pages/salt/salt-overview.adoc
@@ -9,7 +9,7 @@ In {productname}, the Salt master runs on the {productname} Server, allowing you
 
 This book is designed to be a primer for using Salt with {productname}.
 
-For more information about Salt, see the Salt documentation at https://docs.saltstack.com/en/latest/contents.html.
+For more information about Salt, see the Salt documentation at https://docs.saltproject.io/en/latest/contents.html.
 
 The current version of Salt in {productname} is {saltversion}.
 
