Backport 4.3: ccg oes244 #25899 (#3544)
* adding OES client supported
* https://github.com/uyuni-project/uyuni-docs/issues/3312
* https://github.com/SUSE/spacewalk/issues/25899

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -92,9 +92,14 @@ The operating system running on a client is supported by the organization that s
 | {check}
 | {check}
 
-| {debian} 12, 11
+| {debian} 12, 11 (*)
 | {x86_64}
 | {cross}
+| {check}
+
+| {oes} 24.4, 23.4
+| {x86_64}
+| {check}
 | {check}
 
 | {oracle} 9, 8, 7
