Change proxy helm installation to use package from OS channel
Signed-off-by: Ricardo Mateus <rmateus@suse.com>

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-k3s-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-k3s-deployment-suma.adoc
@@ -25,21 +25,12 @@ curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--tls-san=<K3S_HOST_FQDN>" sh -
 
 The installation requires the [literal]``mgrpxy`` and [literal]``helm`` packages.
 
-For Helm, you can install it using the installer script:
-----
-curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
-chmod 700 get_helm.sh
-./get_helm.sh
-----
-
-For more information, see https://helm.sh/docs/intro/install/#from-script.
-
-The [literal]``mgrpxy`` package is available in the {productname} Proxy product repositories.
+The [literal]``mgrpxy`` and ``helm`` packages are available in the {productname} Proxy product repositories.
 
 . To install it run:
 +
 ----
-transactional-update pkg install mgrpxy
+transactional-update pkg install helm mgrpxy
 ----
 
 . Reboot
